# Institution-django

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  s.txt  setup.cfg
src/: manage.py  pytest.ini
src/configs/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: middlewares.py  permissions.py
src/institutions/: admin.py  apps.py  serializers.py  urls.py  views.py
src/institutions/migrations/: 0001_initial.py
src/institutions/models/: __init__.py  institutions.py  many_to_many.py
src/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
src/tests/: conftest.py  factories.py  utils.py
src/tests/institutions/: conftest.py  test_institutions.py
src/tests/products/: conftest.py  test_products.py
src/tests/users/: test_auth.py
src/users/: admin.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/utils/: time.py
